# CS6120-exercises

./: CMakeLists.txt  cfg.cpp  cfg.hpp  cfg_main.cpp
core/: CMakeLists.txt  casting.hpp  cfg.cpp  cfg.hpp  dom.cpp  dom.hpp  leave_ssa.cpp  leave_ssa.hpp  parse.cpp  parse.hpp  ssa.cpp  ssa.hpp  string_pool.hpp  types.cpp  types.hpp  unreachable.hpp
coretest/: CMakeLists.txt  cfg_main.cpp  dom_main.cpp  leave_ssa_main.cpp  lives_main.cpp  parse_main.cpp  rdefs_main.cpp  ssa_main.cpp  to_ssa_main.cpp
df/: CMakeLists.txt  df.cpp  df.hpp  lives.cpp  lives.hpp  rdefs.cpp  rdefs.hpp
l11/: brench.toml  brili.ts
l12/: brili-ins.ts
l13/: l13.py  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test8.txt
l2/: scrambleOps.py
l3/: CMakeLists.txt  a.bril  brench.toml  lvn.py  tdce.cpp
l6/: brench.toml  ssa_phi_opt.toml
l8/: CMakeLists.txt  Licm.cpp  README.md  test.c
l8/licm/: CMakeLists.txt  Licm.cpp
llvm-pass-skeleton-master/: a.out  hello.c
llvm-pass-skeleton-master/skeleton/: Skeleton.cpp
